--- a/pages/control/txxmxx/txxmxx.wxml
+++ b/pages/control/txxmxx/txxmxx.wxml
@@ -18,6 +18,25 @@
   </view>
 </view>
 
+<!-- 项目信息 -->
+<view wx:if="{{showProjectInfo}}">
+  <view style="padding-bottom: 100rpx;">
+
+    <!-- 悬浮块展示 -->
+    <view wx:for="{{projectNameListByCategory}}" wx:key="index" class="suspension-card-external">
+      <view class="suspension-card-internal">
+        <van-cell-group title="{{item.name}}">
+          <van-cell wx:for="{{item.projectList}}"  wx:key="index1"
+            title="{{item1.projectName}}" 
+            url="/pages/control/txxmxx/txBase/txBase?categoryType={{item1.categoryType}}&projectId={{item1.projectId}}" 
+            wx:for-item="item1" wx:for-index="index1" is-link />
+        </van-cell-group>
+      </view>
+    </view>
+
+  </view>
+</view>
+
 
 
 
@@ -25,7 +44,7 @@
 <!-- 底部菜单 -->
 <van-tabbar active="{{active}}" bind:change="tabbarChange" active-color="#0089dd" inactive-color="#000">
   <van-tabbar-item icon="notes-o">进度/计划</van-tabbar-item>
-  <van-tabbar-item icon="">待定</van-tabbar-item>
+  <van-tabbar-item icon="description">项目信息</van-tabbar-item>
   <van-tabbar-item icon="">待定</van-tabbar-item>
   <van-tabbar-item icon="">待定</van-tabbar-item>
 </van-tabbar>
