--- a/pages/control/txxmxx/txxmxx.wxml
+++ b/pages/control/txxmxx/txxmxx.wxml
@@ -1,6 +1,6 @@
 
 <!-- 计划和进度 -->
-<view wx:if="{{showPlanSchedule}}" style="width:100%;height:100%;display:flex;justify-content:center;align-items:center;">
+<view wx:if="{{showPlanSchedule==active}}" style="width:100%;height:100%;display:flex;justify-content:center;align-items:center;">
   <view style="padding-bottom: 100rpx;width:60%;">
 
     <view bindtap="totxPlan" data-tag='1'  class="suspension-card-external-page" hover-class="plan-schedule-hover">
@@ -19,7 +19,7 @@
 </view>
 
 <!-- 项目信息 -->
-<view wx:if="{{showProjectInfo}}">
+<view wx:if="{{showProjectInfo==active}}">
   <view style="padding-bottom: 100rpx;">
 
     <!-- 悬浮块展示 -->
