--- a/pages/control/control.wxml
+++ b/pages/control/control.wxml
@@ -11,11 +11,11 @@
 		<view class="suspension-card-internal">
 			<van-cell-group title="建设单位操作区">
 				<van-grid square clickable column-num="3" border="{{false}}">
-					<van-grid-item badge="{{}}" bind:click="toQzsp" icon="/images/tjqzsp.png" text="提交签证审批" />
+					<van-grid-item badge="{{}}" bind:click="toQzsp" icon="/images/qzsp.png" text="提交签证审批" />
 					<van-grid-item badge="{{allRedDotNum.problemPlanNum}}" bind:click="toWtjy" icon="/images/tjwtjy.png" text="提交问题建议" />
 					<van-grid-item badge="{{}}" bind:click="toXmxx" icon="/images/txjdxx.png" text="填写项目信息" />
-					<van-grid-item badge="{{}}" bind:click="toHtgl" icon="/images/tjhtgl.png" text="提交合同管理" />
-					<van-grid-item badge="{{}}" bind:click="toTzwj" icon="/images/tjtzwj.png" text="提交图纸文件" />
+					<van-grid-item badge="{{}}" bind:click="toHtgl" icon="/images/htgl.png" text="提交合同管理" />
+					<van-grid-item badge="{{}}" bind:click="toTzwj" icon="/images/tzwj2.png" text="提交图纸文件" />
 					<van-grid-item badge="{{}}" bind:click="toZjxx" icon="/images/zjxx.png" text="提交造价信息" />
 				</van-grid>
 			</van-cell-group>
@@ -28,7 +28,7 @@
 			<van-cell-group title="总工办操作区">
 				<van-grid square clickable column-num="3" border="{{false}}">
 					<van-grid-item badge="{{}}" bind:click="toAqjc" icon="/images/aqjc.png" text="提交安全检查" />
-					<van-grid-item badge="{{}}" bind:click="toTptx" icon="/images/tjtptx.png" text="提交图片图像" />
+					<van-grid-item badge="{{}}" bind:click="toTptx" icon="/images/tptx.png" text="提交图片图像" />
 				</van-grid>
 			</van-cell-group>
 		</view>
@@ -39,7 +39,7 @@
 		<view class="suspension-card-internal">
 			<van-cell-group title="督察部操作区">
 				<van-grid square clickable column-num="3" border="{{false}}">
-					<van-grid-item badge="{{}}" bind:click="toZljc" icon="/images/tjzljc.png" text="提交质量检查" />
+					<van-grid-item badge="{{}}" bind:click="toZljc" icon="/images/zljc.png" text="提交质量检查" />
 				</van-grid>
 			</van-cell-group>
 		</view>
