--- a/pages/control/txxmxx/txGqxx/txGqxx.wxss
+++ b/pages/control/txxmxx/txGqxx/txGqxx.wxss
@@ -1,1 +1,72 @@
 /* pages/control/txxmxx/txGqxx/txGqxx.wxss */
+.van-collapse{
+  margin-bottom: 100rpx;
+}
+.project-name{
+  height: 70rpx;
+  line-height: 70rpx;
+  text-align: center;
+  background-color: #fff;
+  margin-bottom: 10rpx;
+  color: #323233;
+}
+.van-collapse-item{
+  margin-bottom: 10rpx;
+}
+.van-collapse-item-bgc {
+  /* background-color: #efefef; */
+}
+.btn-wrapper{
+  text-align: right;
+  margin-bottom: 10rpx;
+}
+.kg-msg-list{
+  border-top: 5rpx solid #efefef;
+  
+}
+.kg-msg-list .kg-msg-list-item{
+  padding: 10rpx 20rpx 10rpx 70rpx;
+  border-bottom: 1rpx solid #efefef;
+  position: relative;
+}
+.kg-msg-list .kg-msg-list-item .num{
+  position: absolute;
+  left: 0rpx;
+  top: 75rpx;
+}
+.kg-msg-list .kg-msg-list-item .kg-msg-list-item-title{
+  height: 60rpx;
+  line-height: 60rpx;
+  color: #333;
+  font-size: 28rpx;
+}
+.kg-msg-list .kg-msg-list-item .kg-msg-list-item-row{
+  display: flex;
+}
+.kg-msg-list .kg-msg-list-item .kg-msg-list-item-row .kg-msg-list-item-key{
+  flex: 3;
+}
+.kg-msg-list .kg-msg-list-item .kg-msg-list-item-row .kg-msg-list-item-val{
+  text-align: right;
+  flex: 7;
+}
+
+.gqyx-list{
+  border-top: 5rpx solid #efefef;
+  
+}
+.gqyx-list .gqyx-list-item{
+  padding: 10rpx;
+  border-bottom: 1rpx solid #efefef;
+  position: relative;
+}
+.gqyx-list .gqyx-list-item .gqyx-list-item-row{
+  display: flex;
+}
+.gqyx-list .gqyx-list-item .gqyx-list-item-row .gqyx-list-item-key{
+  flex: 3;
+}
+.gqyxg-list .gqyx-list-item .gqyx-list-item-row .gqyx-list-item-val{
+  flex: 7;
+  text-align: right;
+}
