--- a/pages/control/control.wxml
+++ b/pages/control/control.wxml
@@ -1,29 +1,27 @@
 <!-- 无权限展示页 -->
 <limitPage notShowLimit="{{notShowLimit}}"></limitPage>
-<!-- 搜索框 -->
-<!-- <controlSearch projectNames="{{projectNames}}" bind:inputTyping="inputTyping" bind:selectProject="selectProject">
-</controlSearch> -->
+<van-toast id="van-toast" />
 
 <view wx:if="{{notShowLimit}}">
 
 	<!-- 建设单位 -->
-	<view class="suspension-card-external">
+	<view wx:if="{{showBuildUnit || showCost}}" class="suspension-card-external">
 		<view class="suspension-card-internal">
 			<van-cell-group title="建设单位操作区">
 				<van-grid square clickable column-num="3" border="{{false}}">
-					<van-grid-item badge="{{}}" bind:click="toQzsp" icon="/images/qzsp.png" text="提交签证审批" />
-					<van-grid-item badge="{{allRedDotNum.problemPlanNum}}" bind:click="toWtjy" icon="/images/tjwtjy.png" text="提交问题建议" />
-					<van-grid-item badge="{{}}" bind:click="toXmxx" icon="/images/txjdxx.png" text="填写项目信息" />
-					<van-grid-item badge="{{}}" bind:click="toHtgl" icon="/images/htgl.png" text="提交合同管理" />
-					<van-grid-item badge="{{}}" bind:click="toTzwj" icon="/images/tzwj2.png" text="提交图纸文件" />
-					<van-grid-item badge="{{}}" bind:click="toZjxx" icon="/images/zjxx.png" text="提交造价信息" />
+					<van-grid-item wx:if="{{showBuildUnit}}" badge="{{}}" bind:click="toQzsp" icon="/images/qzsp.png" text="提交签证审批" />
+					<van-grid-item wx:if="{{showBuildUnit}}" badge="{{allRedDotNum.problemPlanNum}}" bind:click="toWtjy" icon="/images/tjwtjy.png" text="提交问题建议" />
+					<van-grid-item wx:if="{{showBuildUnit}}" badge="{{}}" bind:click="toXmxx" icon="/images/txjdxx.png" text="填写项目信息" />
+					<van-grid-item wx:if="{{showBuildUnit}}" badge="{{}}" bind:click="toHtgl" icon="/images/htgl.png" text="提交合同管理" />
+					<van-grid-item wx:if="{{showBuildUnit}}" badge="{{}}" bind:click="toTzwj" icon="/images/tzwj2.png" text="提交图纸文件" />
+					<van-grid-item wx:if="{{showBuildUnit || showCost}}" badge="{{}}" bind:click="toZjxx" icon="/images/zjxx.png" text="提交造价信息" />
 				</van-grid>
 			</van-cell-group>
 		</view>
 	</view>
 
 	<!-- 总工办 -->
-	<view class="suspension-card-external">
+	<view wx:if="{{showZongGongBan}}" class="suspension-card-external">
 		<view class="suspension-card-internal">
 			<van-cell-group title="总工办操作区">
 				<van-grid square clickable column-num="3" border="{{false}}">
@@ -35,7 +33,7 @@
 	</view>
 
 	<!-- 督察部 -->
-	<view class="suspension-card-external">
+	<view wx:if="{{showDuChaBu}}" class="suspension-card-external">
 		<view class="suspension-card-internal">
 			<van-cell-group title="督察部操作区">
 				<van-grid square clickable column-num="3" border="{{false}}">
